fixed comma wrapping bug in artists names

--- a/app/_scss/_playerbar.scss
+++ b/app/_scss/_playerbar.scss
@@ -43,12 +43,8 @@
 }
 
 .playerbar-link,
-.playerbar-artist {
-  font-size: $font-size-small;
-}
-
 .playerbar-artists {
-  margin-bottom: 0;
+  font-size: $font-size-small;
 }
 
 .playerbar-title {
