--- a/app/_scss/_songs.scss
+++ b/app/_scss/_songs.scss
@@ -31,7 +31,6 @@
 // Artist
 
 .song-artists {
-  list-style: none;
   padding: 0;
   color: $gray-light;
   font-size: $font-size-small;
@@ -39,14 +38,6 @@
   
   @media (min-width: $screen-sm) {
     font-size: $font-size-base;
-  }
-}
-
-.song-artist {
-  display: inline-block;
-
-  + .song-artist:before {
-    content: ', ';
   }
 }
 
